Updated schedule in syllabus.

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -195,9 +195,9 @@ A tentative sketch of the schedule.
 
 \textbf{Friday}
 \begin{itemize}
-\item Introduction to variational inference (with pymc3 activity)
-\item Bayesian logistic and categorical regression
 \item Bayesian deep learning
+\item Introduction to variational inference (with pymc3 activity)
+\item Non-conjugate models: Bayesian logistic regression, Bayesian categorical regression, racially polarized voting model
 \end{itemize}
 
 
