--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -183,21 +183,22 @@ A tentative sketch of the schedule.
 \textbf{Wednesday}
 \begin{itemize}
 \item Sampling, part II (Gibbs sampling, HMC, NUTS; with activity) 
-\item Multivariate normal, part I (motivation, cybersecurity application, Gibbs sampler, activity)
+\item Multivariate normal, part I (motivation, building blocks)
 \end{itemize}
 
 \textbf{Thursday}
 \begin{itemize}
-\item Multivariate normal, part II (handling missing data)
-\item Bayesian linear regression (plus activity)
-\item Hierarchical Bayesian linear regression
+\item Multivariate normal, part II (cybersecurity application, Gibbs sampling, handling missing data)
+\item Introduction to pymc3 (activity)
+\item Non-conjugate models:  A racially polarized voting model 
+\item Bayesian linear regression, part I 
 \end{itemize}
 
 \textbf{Friday}
 \begin{itemize}
-\item Bayesian deep learning
+\item Bayesian deep learning 
+\item Bayesian linear regression part II (hierarchical models, with pymc3 activity)
 \item Introduction to variational inference (with pymc3 activity)
-\item Non-conjugate models: Bayesian logistic regression, Bayesian categorical regression, racially polarized voting model
 \end{itemize}
 
 
