--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -188,9 +188,8 @@ A tentative sketch of the schedule.
 
 \textbf{Thursday}
 \begin{itemize}
-\item Multivariate normal, part II (cybersecurity application, Gibbs sampling, handling missing data)
-\item Introduction to pymc3 (activity)
-\item Non-conjugate models:  A racially polarized voting model 
+\item Multivariate normal, part II (cybersecurity application, Gibbs sampling, plus data analysis activity) 
+\item Non-conjugate models:  A racially polarized voting model (plus activity, including introduction to pymc3)
 \item Bayesian linear regression, part I 
 \end{itemize}
 
