--- a/slides/mvn/bayesian_multivariate_normal/bm_multivariate_normal.tex
+++ b/slides/mvn/bayesian_multivariate_normal/bm_multivariate_normal.tex
@@ -181,6 +181,7 @@ Given observations $\+x := (\+x_1,  \hdots \+x_N)$,  where each $\+x_i \in \R^d$
 \end{align*}
 \end{block}
 
+\pause 
 \begin{block}{The Normal-Inverse-Wishart prior}
 	\begin{align*}
 \+\mu, \+\Sigma &\sim \NIW_d(\alpha_0, \+\mu_0, \nu_0, \+\Psi_0 ) 
@@ -241,6 +242,32 @@ Conditional conjugacy (sometimes called semi-conjugacy) can be defined similarly
 \end{frame}
 
 
+\begin{frame}{The complete conditional for $\+\mu$}
+
+\scriptsize We use the exponential family representation of the MVN  to represent the prior in terms of its natural parameters
+\begin{align*}
+	p(\+\mu) &\propto \exp \bigg\{ -\half \+\mu^T \+\Sigma_0^{-1} \+\mu + \+\mu^T \+\Sigma_0^{-1} \+\mu_0 \bigg\} 
+\labelit \label{eqn:prior_for_mvn_fixed_cov}
+\end{align*}
+
+And similarly, we write the likelihood $	L(\+\mu) = p(\+y \cond \+\mu) = \prod_{i=1}^n p(\+y_i \cond \+\mu)$  as
+\begin{align*}
+	L(\+\mu) &\propto \exp \bigg\{ -\half \ds\sum_{i=1}^n (\+y_i - \+\mu)^T \+\Sigma^{-1} (\+y_i - \+\mu)\bigg\}  \\
+	&= \exp \bigg\{ - \half \+\mu^T n \+\Sigma^{-1} \+\mu + \+\mu^T \+\Sigma^{-1} n \bar{\+y} \bigg\} 
+\labelit \label{eqn:likelihood_for_mvn_fixed_cov}
+\end{align*}
+
+
+\textit{Can you finish the derivation? (Hint: Remember Jimi!)} \pause  
+By Bayes' law, combining the like terms in $\+\mu$ of \eqref{eqn:prior_for_mvn_fixed_cov} and \eqref{eqn:likelihood_for_mvn_fixed_cov}, we find
+\begin{align*}
+ p(\+\mu \cond \+y) &\propto \explaintermbrace{prior}{p(\+\mu)}\explaintermbrace{likelihood}{p(\+y \cond \+\mu)} \\
+ &= \exp \bigg\{ - \half \+\mu^T \bigg( \explaintermbrace{$:=\+A$}{\+\Sigma_0^{-1} + n  \+\Sigma^{-1}}\bigg)  \+\mu + \+\mu^T \bigg( \explaintermbrace{$:=\+b$}{\+\Sigma_0 \+\mu_0 + \+\Sigma^{-1} n \bar{\+y}} \bigg) \bigg\} 
+\end{align*}
+which reveals that the posterior is normal,  along with the particular form of its parameter  (covariance $\+A^{-1}$ and mean $\+A^{-1} \+b$). 
+
+\end{frame}
+
 	
 \begin{frame}{Complete conditionals for the Bayesian MVN}
 	
@@ -271,26 +298,7 @@ These complete conditionals have nice interpretations:
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Complete conditionals: Proof for $\+\mu$}
-\scriptsize 
-First,  we consider the likelihood $L(\+\beta) := p(\+y \cond \+\beta,  \sigma^2$),  dropping terms proportional to  $\+\beta$.
-\begin{align*}
-p(\+y \cond \+\beta,  \sigma^2) & \propto  \exp \bigg\{  -\df{1}{2 \sigma^2}  (\+y - \+X \+\beta)^T (\+y - \+X \+\beta) \bigg\} \\ 
-&=   \exp \bigg\{  -\df{1}{2 \sigma^2}  (- 2 \+\beta^T \+X^T \+y + \+\beta^T \+X^T \+X \+\beta) \bigg\} \\ 
-\end{align*}
-Doing the same for the prior $p(\+\beta)$,  we have 
-\begin{align*}
-p(\+\beta) & \propto  \exp \bigg\{  -\df{1}{2}  (- 2 \+\beta^T \+\Sigma_0 \+\mu_0 + \+\beta^T \+\Sigma_0^{-1} \+\beta) \bigg\} \\ 
-\end{align*}
-\textit{Can you finish the proof?} \pause  By Bayes rule
-\begin{align*}
-p(\+\beta \cond  \+y ,  \sigma^2 ) & \propto  p(\+y \cond \+\beta,  \sigma^2) \times p(\+\beta)  \\
-& \propto  \exp \bigg\{   \+\beta^T \explaintermbrace{$:=\+b$}{\bigg(\+\Sigma_0^{-1} \+\mu_0 +  \frac{1}{\sigma^2}\+X^T \+y \bigg)} - \half \+\beta^T   \explaintermbrace{$:=\+A$}{\bigg(\+\Sigma_0^{-1}  +  \frac{1}{\sigma^2} \+X^T \+X \bigg)}  \+\beta \bigg\}
-\end{align*}
 
-which reveals that the posterior is normal (\alert{remember Jimi!}),  along with the particular form of its parameter  (covariance $\+A^{-1}$ and mean $\+A^{-1} \+b$).  
-
-\end{frame}
 	
 	
 
